# dolfinx_eqlb

./: .gitignore  COPYING.LESSER  README.md
.devcontainer/: Dockerfile  devcontainer.json
cpp/: BoundaryData.cpp  BoundaryData.hpp  CMakeLists.txt  DOLFINX_EQLBConfig.cmake.in  FluxBC.hpp  KernelData.cpp  KernelData.hpp  Patch.cpp  Patch.hpp  PatchCstm.cpp  PatchCstm.hpp  PatchData.hpp  PatchFluxCstm.hpp  PatchFluxEV.cpp  PatchFluxEV.hpp  PatchStress.hpp  ProblemData.hpp  ProblemDataCstmFlux.hpp  ProblemDataFlux.hpp  ProblemDataFluxCstm.hpp  ProblemDataFluxEV.hpp  ProblemDataStress.hpp  QuadratureRule.cpp  QuadratureRule.hpp  StorageStiffness.hpp  assemble_patch_constrmin.hpp  assemble_patch_semiexplt.hpp  assemble_projection_boundary.hpp  assembly.hpp  flux_kernels.hpp  local_solver.hpp  minimise_flux.hpp  reconstruction.cpp  reconstruction.hpp  solve_patch_constrmin.cpp  solve_patch_constrmin.hpp  solve_patch_semiexplt.hpp  solve_patch_weaksym.hpp  utils.cpp  utils.hpp
cpp/base/: CMakeLists.txt  Patch.hpp
cpp/demo/: CMakeLists.txt  a  main.cpp
cpp/dolfinx_eqlb/: BoundaryData.cpp  BoundaryData.hpp  CMakeLists.txt  FluxBC.hpp  KernelData.cpp  KernelData.hpp  PatchCstm.cpp  PatchCstm.hpp  PatchData.hpp  PatchFluxEV.cpp  PatchFluxEV.hpp  ProblemData.hpp  ProblemDataFluxCstm.hpp  ProblemDataFluxEV.hpp  QuadratureRule.hpp  StorageStiffness.hpp  assemble_patch_constrmin.hpp  assemble_patch_semiexplt.hpp  assemble_projection_boundary.hpp  dolfinx_eqlb.hpp  local_solver.hpp  reconstruction.hpp  solve_patch_constrmin.hpp  solve_patch_semiexplt.hpp  solve_patch_weaksym.hpp  utils.cpp  utils.hpp
cpp/dolfinx_eqlb/base/: BoundaryData.cpp  BoundaryData.hpp  CMakeLists.txt  EquilibrationProblem.hpp  Equilibrator.hpp  FluxBC.hpp  KernelData.cpp  KernelData.hpp  KernelDataBC.cpp  KernelDataBC.hpp  Patch.hpp  ProblemData.hpp  QuadratureRule.hpp  assemble_bcs_impl.hpp  deqlb_base.hpp  equilibration.hpp  local_solver.hpp  mdspan.hpp
cpp/dolfinx_eqlb/ev/: CMakeLists.txt  Patch.cpp  Patch.hpp  ProblemData.hpp  StorageStiffness.hpp  assembly.hpp  deqlb_ev.hpp  reconstruction.hpp  solve_patch.hpp
cpp/dolfinx_eqlb/se/: CMakeLists.txt  Equilibrator.hpp  KernelData.cpp  KernelData.hpp  Patch.cpp  Patch.hpp  PatchData.hpp  ProblemData.hpp  assemble_patch_semiexplt.hpp  assembly.hpp  deqlb_se.hpp  fluxmin_kernel.hpp  reconstruction.hpp  solve_patch_semiexplt.hpp  solve_patch_weaksym.hpp  stressmin_kernel.hpp  utils.hpp
docker/: Dockerfile  build_image.sh  launch-container.sh
python/: CMakeLists.txt  pyproject.toml  setup.py
python/demo/: demo_convstudy_elasticity.py  demo_convstudy_poisson.py  demo_local_projection.py  demo_reconstruction_elasticity.py  demo_reconstruction_poisson.py  test_local_assembler.py
python/demo/elacticity/: demo_error_estimation.py  demo_reconstruction.py
python/demo/elasticity/: demo_error_estimation.py  demo_reconstruction.py
python/demo/elasticity_adaptive/: demo_cook.py
python/demo/poisson/: demo_error_estimation.py  demo_reconstruction.py
python/demo/poisson_adaptive/: demo_discont-coeff.py  demo_lshape.py
python/demo/projection/: demo_local_projection.py
python/dolfinx_eqlb/: __init__.py  e_raviart_thomas.py  equilibration.py  lsolver.py  projection.py  wrappers.cpp
python/dolfinx_eqlb/base/: __init__.py  custom_basix.py  function.py  mesh.py
python/dolfinx_eqlb/elmtlib/: __init__.py  e_raviart_thomas.py
python/dolfinx_eqlb/eqlb/: BoundaryFunction.py  Equilibrator.py  FluxBCs.py  FluxEqlbEV.py  FluxEqlbSE.py  FluxEquilibrator.py  __init__.py  basics.py  bcs.py  check_eqlb_conditions.py  constrained_minimisation.py  equilibration.py
python/dolfinx_eqlb/lsolver/: __init__.py  lsolver.py  projection.py
python/test/performance/: perftest.py  perftest_basics.py  perftest_fluxeqlb-multirhs.py
python/test/unit/: test_expression.py  test_fluxeqlb_bcond.py  test_fluxeqlb_conditions.py  test_fluxeqlb_convrate.py  test_fluxeqlb_multirhs.py  test_hierarchic_rt.py  test_localsolver.py  test_localsolver_multilhs.py  test_localsolver_projection.py  test_localsolver_projection_ufl.py  test_stressqlb_bcond.py  test_stressqlb_conditions.py  testcase_elasticity.py  testcase_general.py  testcase_poisson.py  utils.py
